# NoteDock

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  docker-compose.yml.example
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  ai.py  comments.py  companies.py  drafts.py  drawings.py  files.py  folders.py  import_export.py  linkmap.py  notes.py  projects.py  search.py  settings.py  tags.py  templates.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial.py  002_add_editing_lock.py  003_add_templates_and_drafts.py  004_add_settings_and_author.py  005_add_view_count.py  006_add_hidden_from_home.py  007_add_companies_and_projects.py  008_add_drawings.py  009_add_weekly_report_template.py  010_add_template_sort_order.py
backend/app/models/: __init__.py  activity_log.py  app_settings.py  comment.py  company.py  drawing.py  drawing_comment.py  drawing_history.py  drawing_share.py  file.py  folder.py  note.py  note_draft.py  note_link.py  note_version.py  project.py  tag.py  template.py
backend/app/repositories/: comment_repo.py  company_repo.py  draft_repo.py  drawing_repo.py  file_repo.py  folder_repo.py  link_repo.py  note_repo.py  project_repo.py  tag_repo.py  template_repo.py
backend/app/schemas/: __init__.py  ai.py  comment.py  common.py  company.py  draft.py  drawing.py  file.py  note.py  project.py  settings.py  template.py
backend/app/scripts/: cron_backup.sh  reset_data.py  run_backup.py  run_cleanup.py  run_weekly_report.py
backend/app/services/: activity_log_service.py  ask_service.py  cleanup_service.py  comment_service.py  company_service.py  discord_service.py  draft_service.py  drawing_service.py  file_service.py  import_export_service.py  linkmap_service.py  note_service.py  project_service.py  settings_service.py  template_service.py  weekly_report_service.py
backend/app/utils/: markdown.py  s3.py  weekly_report_parser.py
backend/app/websocket/: __init__.py  connection_manager.py  drawing_ws.py
backend/scripts/: migrate_minio_files_to_db.py
backend/tests/: conftest.py  test_ai_endpoints.py  test_ask_service.py  test_comments_api.py  test_company_api.py  test_company_model.py  test_company_repo.py  test_company_schemas.py  test_company_service.py  test_files_api.py  test_health.py  test_linkmap_api.py  test_markdown_project_links.py  test_note_project.py  test_note_project_schema.py  test_note_repo_project.py  test_notes_api.py  test_notes_api_project.py  test_project_api.py  test_project_model.py  test_project_repo.py  test_project_schemas.py  test_project_service.py
docs/: animation-spec.md  coding_guide.md  design.md  discord-webhook.md  spec.md  tasks.md  ui-improvement-plan.md  user_guide.md
frontend/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
scripts/: backup.sh  migrate_to_v2.sh  restore.sh  (+1 more)
(+172 files in other folders)
